# deep-history-py

./: CHECKS  Pipfile  Procfile  README.md  app.py  pyproject.toml
.github/workflows/: python-app.yml
deephistory/: deephistory.py  wsgi.py
deephistory/templates/: _macros.html  _template.html  index.html  missing_element.html  node.html  relation.html  way.html
templates/: missing_element.html  relation.html  way.html
