[project]
name = "deep-history-py"
version = "0.1.0"
description = "Python version of the Mapki OSM Deep History viewer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "requests",
    "flask",
    "gunicorn",
]

[project.optional-dependencies]
dev = [
    "flake8",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
